# vit_for_mnist

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/: main_mnist_anchor_in_sequence.py  main_mnist_classification.py  main_mnist_sum_prediction.py  test.py
