[project]
name = "vit-for-mnist"
version = "0.1.0"
description = "Vision Transformer for MNIST"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.5.3",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
